; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_get_cookies.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_message.c_vlc_http_msg_get_cookies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_http_msg = type { i32, i32** }

@.str = private unnamed_addr constant [11 x i8] c"Set-Cookie\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_http_msg_get_cookies(%struct.vlc_http_msg* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.vlc_http_msg*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.vlc_http_msg* %0, %struct.vlc_http_msg** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %4
  br label %50

13:                                               ; preds = %4
  store i32 0, i32* %9, align 4
  br label %14

14:                                               ; preds = %47, %13
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %5, align 8
  %17 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp ult i32 %15, %18
  br i1 %19, label %20, label %50

20:                                               ; preds = %14
  %21 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %5, align 8
  %22 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %21, i32 0, i32 1
  %23 = load i32**, i32*** %22, align 8
  %24 = load i32, i32* %9, align 4
  %25 = zext i32 %24 to i64
  %26 = getelementptr inbounds i32*, i32** %23, i64 %25
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @strcasecmp(i32 %29, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %46, label %32

32:                                               ; preds = %20
  %33 = load i32*, i32** %6, align 8
  %34 = load %struct.vlc_http_msg*, %struct.vlc_http_msg** %5, align 8
  %35 = getelementptr inbounds %struct.vlc_http_msg, %struct.vlc_http_msg* %34, i32 0, i32 1
  %36 = load i32**, i32*** %35, align 8
  %37 = load i32, i32* %9, align 4
  %38 = zext i32 %37 to i64
  %39 = getelementptr inbounds i32*, i32** %36, i64 %38
  %40 = load i32*, i32** %39, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  %42 = load i32, i32* %41, align 4
  %43 = load i8*, i8** %7, align 8
  %44 = load i8*, i8** %8, align 8
  %45 = call i32 @vlc_http_cookies_store(i32* %33, i32 %42, i8* %43, i8* %44)
  br label %46

46:                                               ; preds = %32, %20
  br label %47

47:                                               ; preds = %46
  %48 = load i32, i32* %9, align 4
  %49 = add i32 %48, 1
  store i32 %49, i32* %9, align 4
  br label %14

50:                                               ; preds = %12, %14
  ret void
}

declare dso_local i32 @strcasecmp(i32, i8*) #1

declare dso_local i32 @vlc_http_cookies_store(i32*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
